syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.coua";

import "common.proto";

enum TransactionEventType {
  TRANSACTION_EVENT_NONE = 0;
  TRANSACTION_EVENT_MERGE_USER_ACCOUNTS = 1;
}

message TransactionEventMessage {
  TransactionEventType type = 1;
  uint64 timestamp = 2;
  string eventId = 3;
  oneof event {
    MergeUserAccountsEvent mergeUserAccountsEvent = 4;
  }
}

message MergeUserAccountsEvent {
  string wechatUserId = 1;
  string webMobileUserId = 2;
}
